<resources>
    <string name="app_name">bphrms</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authorization">Авторизация</string>
    <string name="login_signup">Вход/Регистрация</string>
    <string name="iam_doctor">Я доктор</string>
    <string name="iam_patient">Я пациент</string>
    <string name="login">Войти</string>
    <string name="login_esia">Войти через ГосУслуги</string>
    <string name="API_URL">https://bphrmsapi.azurewebsites.net/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_measurement">Добавить Замер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>